feat: ajustes de respuesta en controllers
